--- a/zettadaten_fe/styles/globals.css
+++ b/zettadaten_fe/styles/globals.css
@@ -1,4 +1,4 @@
-html,
+/* html,
 body {
   padding: 0;
   margin: 0;
@@ -25,3 +25,7 @@ a {
   }
 }
 
+*/
+
+@tailwind components;
+@tailwind utilities;
